user api swagger done
