# backend/source/generated/restapi/operations/user_mgmt_v1/login_v1_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package login_v1
+package user_mgmt_v1
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
