# backend/source/generated/restapi/operations/user_mgmt_v1/update_user_info_v1_responses.go
@@ -1,0 +1,322 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package user_mgmt_v1
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"2021-fall-cs160-team-Mochi/backend/source/generated/models"
+)
+
+// UpdateUserInfoV1OKCode is the HTTP code returned for type UpdateUserInfoV1OK
+const UpdateUserInfoV1OKCode int = 200
+
+/*UpdateUserInfoV1OK Success
+
+swagger:response updateUserInfoV1OK
+*/
+type UpdateUserInfoV1OK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.UserObj `json:"body,omitempty"`
+}
+
+// NewUpdateUserInfoV1OK creates UpdateUserInfoV1OK with default headers values
+func NewUpdateUserInfoV1OK() *UpdateUserInfoV1OK {
+
+	return &UpdateUserInfoV1OK{}
+}
+
+// WithPayload adds the payload to the update user info v1 o k response
+func (o *UpdateUserInfoV1OK) WithPayload(payload *models.UserObj) *UpdateUserInfoV1OK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user info v1 o k response
+func (o *UpdateUserInfoV1OK) SetPayload(payload *models.UserObj) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserInfoV1OK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserInfoV1BadRequestCode is the HTTP code returned for type UpdateUserInfoV1BadRequest
+const UpdateUserInfoV1BadRequestCode int = 400
+
+/*UpdateUserInfoV1BadRequest Bad Request
+
+swagger:response updateUserInfoV1BadRequest
+*/
+type UpdateUserInfoV1BadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrResponse `json:"body,omitempty"`
+}
+
+// NewUpdateUserInfoV1BadRequest creates UpdateUserInfoV1BadRequest with default headers values
+func NewUpdateUserInfoV1BadRequest() *UpdateUserInfoV1BadRequest {
+
+	return &UpdateUserInfoV1BadRequest{}
+}
+
+// WithPayload adds the payload to the update user info v1 bad request response
+func (o *UpdateUserInfoV1BadRequest) WithPayload(payload *models.ErrResponse) *UpdateUserInfoV1BadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user info v1 bad request response
+func (o *UpdateUserInfoV1BadRequest) SetPayload(payload *models.ErrResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserInfoV1BadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserInfoV1UnauthorizedCode is the HTTP code returned for type UpdateUserInfoV1Unauthorized
+const UpdateUserInfoV1UnauthorizedCode int = 401
+
+/*UpdateUserInfoV1Unauthorized Unauthorized
+
+swagger:response updateUserInfoV1Unauthorized
+*/
+type UpdateUserInfoV1Unauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrResponse `json:"body,omitempty"`
+}
+
+// NewUpdateUserInfoV1Unauthorized creates UpdateUserInfoV1Unauthorized with default headers values
+func NewUpdateUserInfoV1Unauthorized() *UpdateUserInfoV1Unauthorized {
+
+	return &UpdateUserInfoV1Unauthorized{}
+}
+
+// WithPayload adds the payload to the update user info v1 unauthorized response
+func (o *UpdateUserInfoV1Unauthorized) WithPayload(payload *models.ErrResponse) *UpdateUserInfoV1Unauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user info v1 unauthorized response
+func (o *UpdateUserInfoV1Unauthorized) SetPayload(payload *models.ErrResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserInfoV1Unauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserInfoV1ForbiddenCode is the HTTP code returned for type UpdateUserInfoV1Forbidden
+const UpdateUserInfoV1ForbiddenCode int = 403
+
+/*UpdateUserInfoV1Forbidden Forbidden
+
+swagger:response updateUserInfoV1Forbidden
+*/
+type UpdateUserInfoV1Forbidden struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrResponse `json:"body,omitempty"`
+}
+
+// NewUpdateUserInfoV1Forbidden creates UpdateUserInfoV1Forbidden with default headers values
+func NewUpdateUserInfoV1Forbidden() *UpdateUserInfoV1Forbidden {
+
+	return &UpdateUserInfoV1Forbidden{}
+}
+
+// WithPayload adds the payload to the update user info v1 forbidden response
+func (o *UpdateUserInfoV1Forbidden) WithPayload(payload *models.ErrResponse) *UpdateUserInfoV1Forbidden {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user info v1 forbidden response
+func (o *UpdateUserInfoV1Forbidden) SetPayload(payload *models.ErrResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserInfoV1Forbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(403)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserInfoV1NotFoundCode is the HTTP code returned for type UpdateUserInfoV1NotFound
+const UpdateUserInfoV1NotFoundCode int = 404
+
+/*UpdateUserInfoV1NotFound Not Found
+
+swagger:response updateUserInfoV1NotFound
+*/
+type UpdateUserInfoV1NotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrResponse `json:"body,omitempty"`
+}
+
+// NewUpdateUserInfoV1NotFound creates UpdateUserInfoV1NotFound with default headers values
+func NewUpdateUserInfoV1NotFound() *UpdateUserInfoV1NotFound {
+
+	return &UpdateUserInfoV1NotFound{}
+}
+
+// WithPayload adds the payload to the update user info v1 not found response
+func (o *UpdateUserInfoV1NotFound) WithPayload(payload *models.ErrResponse) *UpdateUserInfoV1NotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user info v1 not found response
+func (o *UpdateUserInfoV1NotFound) SetPayload(payload *models.ErrResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserInfoV1NotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserInfoV1ConflictCode is the HTTP code returned for type UpdateUserInfoV1Conflict
+const UpdateUserInfoV1ConflictCode int = 409
+
+/*UpdateUserInfoV1Conflict Conflict
+
+swagger:response updateUserInfoV1Conflict
+*/
+type UpdateUserInfoV1Conflict struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrResponse `json:"body,omitempty"`
+}
+
+// NewUpdateUserInfoV1Conflict creates UpdateUserInfoV1Conflict with default headers values
+func NewUpdateUserInfoV1Conflict() *UpdateUserInfoV1Conflict {
+
+	return &UpdateUserInfoV1Conflict{}
+}
+
+// WithPayload adds the payload to the update user info v1 conflict response
+func (o *UpdateUserInfoV1Conflict) WithPayload(payload *models.ErrResponse) *UpdateUserInfoV1Conflict {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user info v1 conflict response
+func (o *UpdateUserInfoV1Conflict) SetPayload(payload *models.ErrResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserInfoV1Conflict) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(409)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserInfoV1InternalServerErrorCode is the HTTP code returned for type UpdateUserInfoV1InternalServerError
+const UpdateUserInfoV1InternalServerErrorCode int = 500
+
+/*UpdateUserInfoV1InternalServerError Internal Server Error
+
+swagger:response updateUserInfoV1InternalServerError
+*/
+type UpdateUserInfoV1InternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrResponse `json:"body,omitempty"`
+}
+
+// NewUpdateUserInfoV1InternalServerError creates UpdateUserInfoV1InternalServerError with default headers values
+func NewUpdateUserInfoV1InternalServerError() *UpdateUserInfoV1InternalServerError {
+
+	return &UpdateUserInfoV1InternalServerError{}
+}
+
+// WithPayload adds the payload to the update user info v1 internal server error response
+func (o *UpdateUserInfoV1InternalServerError) WithPayload(payload *models.ErrResponse) *UpdateUserInfoV1InternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user info v1 internal server error response
+func (o *UpdateUserInfoV1InternalServerError) SetPayload(payload *models.ErrResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserInfoV1InternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
